Added server code, functionality to get/set track ratings

--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 					<label>Track:  </label><span id="trackName"></span><br/>
 					<label>Rating:  </label>
 					<select id="trackRating">
-						<option>(Rate track)</option>
-						<option>1</option>
-						<option>2</option>
-						<option>3</option>
-						<option>4</option>
-						<option>5</option>
+						<option val="(Rate track)">(Rate track)</option>
+						<option val="1">1</option>
+						<option val="2">2</option>
+						<option val="3">3</option>
+						<option val="4">4</option>
+						<option val="5">5</option>
 					</select>
 				</form>
 				<div id="playlist-player"></div>
-				<div id="errormsg"></div>
             </div>
         </div>
 		
